# digital-event-manager

./: .editorconfig  .gitignore  README.md
backend/: .env.example  .gitignore  Agents.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  generate_api.bat  generate_api.sh  justfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 73887235ae3c_create_base_schema.py  f9d10ab9bc1c_add_unique_constraint_to_jury_scores.py
backend/app/: main.py
backend/app/adapters/api/: dependencies.py  dependencies_program.py
backend/app/adapters/api/v1/: __init__.py  draw.py  draw_results.py  event_program.py  events.py  juries.py  participant_rankings.py  participant_scores.py  poster_contents.py  score_history.py  section_juries.py  sections.py  technical_requirements.py  topics.py  universities.py  venues.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py  event.py  events.py  jury.py  jury_score.py  organizer.py  participant.py  participant_ranking.py  person.py  poster_content.py  score_history.py  section.py  section_jury.py  technical_requirement.py  topic.py  university.py  venues.py
backend/app/schemas/: __init__.py
backend/app/services/: draw.py  event_program.py  events.py  jury.py  jury_score.py  participant_ranking.py  pdf_generator.py  poster_content.py  score_history.py  section.py  section_jury.py  send_mails.py  technical_requirement.py  topic.py  university.py  venues.py
backend/resources/api/v1/: draw.yaml  notifications.yaml
backend/resources/database/: ZHER-20.sql  create_db.sql  create_tables.sql
backend/scripts/: migrate.sh
backend/tests/api/: test_sections.py  test_universities.py
docs/: README.md  (+1 more)
source/: .env.sample  Makefile  pyproject.toml
source/bot/: config.yml  digital_event_manager.db  main.py
source/bot/components/main_menu/: frontend.py  router.py
source/bot/components/main_menu/locale/: en.yml  ru.yml
source/bot/components/participant_drawer/: frontend.py  openapi.yaml  router.py  setup.cfg
source/bot/components/participant_drawer/.openapi-generator/: FILES
source/bot/components/participant_drawer/locale/: en.yml  ru.yml
source/bot/components/participant_drawer/tests/: test_draw_api.py
source/bot/components/participant_registration/: router.py
source/bot/components/participant_registration/locale/: en.yml  ru.yml
source/bot/components/participant_registration/logic/: browse.py  main.py  my_data.py  register.py  states.py
source/bot/components/program_generator/: frontend.py  router.py
source/bot/components/program_generator/locale/: en.yml  ru.yml
source/bot/components/reports_evaluation/: backend.py  fill_db.py.py  frontend.py  query.sql  readme.txt  router.py  states.py
source/bot/components/shared/: db.py  locale.py  routing.py
source/bot/database/: db.py  init_db.py  schema.sql
source/bot/middlewares/: db.py
(+24 files in other folders)
