[project]
name = "backend"
version = "0.1.0"
description = "Digital event manager backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy",
    "uvicorn[standard]",    
    "reportlab"
]

[tool.ruff]
line-length = 79
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
